--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
-  "C_Cpp.default.configurationProvider": "vector-of-bool.cmake-tools",
   "cmake.buildDirectory": "${workspaceFolder}/build/vscode/${variant:buildType}",
   "cmake.parallelJobs": 8,
   "files.associations": {
@@ -81,7 +80,11 @@
     "numeric": "cpp",
     "set": "cpp",
     "valarray": "cpp",
-    "__memory": "cpp"
+    "__memory": "cpp",
+    "*.tcc": "cpp",
+    "condition_variable": "cpp",
+    "memory_resource": "cpp",
+    "cinttypes": "cpp"
   },
   "json.schemas": [
     {
