--- a/libs/yocto_extension/CMakeLists.txt
+++ b/libs/yocto_extension/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_library(yocto_extension yocto_extension.h yocto_extension.cpp)
+add_library(yocto_extension yocto_extension.h yocto_extension.cpp error.h pbrt.h spectrum.h stringprint.h spectrum.cpp tests.h)
 
 set_target_properties(yocto_extension PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED YES)
 target_include_directories(yocto_extension PUBLIC ${CMAKE_SOURCE_DIR}/libs)
-target_link_libraries(yocto_extension yocto yocto_pathtrace)
+target_link_libraries(yocto_extension yocto yocto_pathtrace )
